# fuelpanda

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_local.py
app/: main.py
app/core/: base_handler.py  base_model.py  base_repository.py  base_service.py
app/custom_exceptions/: allocation_exceptions.py  base_exception.py  driver_exceptions.py  inventory_exceptions.py  location_exceptions.py  order_exceptions.py  product_exceptions.py  shift_exceptions.py  tracking_exceptions.py  vehicle_exceptions.py
app/dependencies/: auth.py  config.py  constants.py  database.py  providers.py  redis_client.py  utils.py
app/handlers/: allocation_handler.py  driver_handler.py  fleet_handler.py  inventory_handler.py  location_handler.py  order_handler.py  product_handler.py  shift_handler.py  tracking_handler.py  vehicle_handler.py
app/models/: __init__.py  driver.py  gps_location.py  inventory.py  location.py  order.py  product.py  shift.py  vehicle.py  vehicle_allocation.py
app/repositories/: allocation_repository.py  driver_repository.py  gps_repository.py  inventory_repository.py  location_repository.py  order_repository.py  product_repository.py  shift_repository.py  vehicle_repository.py
app/routers/: allocation_router.py  driver_router.py  fleet_router.py  inventory_router.py  location_router.py  order_router.py  product_router.py  shift_router.py  tracking_router.py  vehicle_router.py
docs/: DATABASE.md  DECISIONS.md  FuelPanda.postman_collection.json  openapi.json
migrations/: env.py
tests/: conftest.py
(+25 files in other folders)
